--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <div class="codys-styles">
                 <h3>Cody: Is a big <em>Lebron James</em> fan 🔥 </h3>
             </div>
+        </div>
+        <div class="codys-styles">
+            <h3>Clayton was <em>was</em> here </h3>
+        </div>
         </section>
     </main>
 </body>
