added contrib to group

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div class="codys-styles">
                 <h3>Cody: Is a big <em>Lebron James</em> fan 🔥 </h3>
             </div>
+            <div class="preston-style">
+                <h3>Preston: Loves <em>cats</em> in Las Vegas, NV</h3>
+            </div>
         </section>
     </main>
 </body>
