--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h3>Cody: Is a big <em>Lebron James</em> fan 🔥 </h3>
             </div>
             <div class="preston-style">
-                <h3>Preston: Loves <em>cats</em> in Las Vegas, NV</h3>
+                <h3>preston: Loves <em>cats</em> in Las Vegas, NV</h3>
             </div>
         </section>
     </main>
