--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h3>Luis: Loves <em>peanuts</em> in Redding, CA</h3>
             </div>
             <div class="codys-styles">
-                <h3>Cody: Is a big <em>Lebron James</em> fan 🔥 </h3>
+                <h3>Patrick is not a <em>Lebron James</em> fan 🔥 </h3>
             </div>
         </div>
         <div class="codys-styles">
