--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="codys-styles">
-            <h3>Clayton was <em>was</em> here </h3>
+            <h3>Clayton <em>was</em> here </h3>
         </div>
         </section>
     </main>
