--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h3>Patrick is not a <em>Lebron James</em> fan 🔥 </h3>
             </div>
         </div>
-        <div class="clay's-style">
+        <div class="clays-style">
             <h3>Clayton <em>was</em> here </h3>
         </div>
         </section>
